--- a/src/components/sunburst/sunburst.css
+++ b/src/components/sunburst/sunburst.css
@@ -1,25 +1,9 @@
-body {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 12px;
-    font-weight: 400;
-    background-color: #fff;
-    width: 680px;
-    height: 800px;
-    margin-top: 10px;
-  }
+
   
-  #main {
-    float: left;
-    width: 550px;
-  }
-  
-  #sidebar {
-    float: right;
-    width: 100px;
-  }
+
   
   #sequence {
-    width: 600px;
+    width: 100%;
     height: 70px;
   }
   
