--- a/src/components/sunburst/sunburst.css
+++ b/src/components/sunburst/sunburst.css
@@ -1,40 +1,59 @@
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  background-color: #fff;
 
+}
   
+#main {
+  display: block;
+  margin: auto;
+  width: 750px;
+  justify-content: center;
+}
+  
+#sequence {
+  width: 100%;
+  height: 70px;
+}
 
-  
-  #sequence {
-    width: 100%;
-    height: 70px;
-  }
-  
-  #legend {
-    padding: 10px 0 0 3px;
-  }
-  
-  #sequence text, #legend text {
-    font-weight: 600;
-    fill: #fff;
-  }
-  
-  #chart {
-    position: relative;
-  }
-  
-  #chart path {
-    stroke: #fff;
-  }
-  
-  #explanation {
-    position: absolute;
-    top: 235px;
-    left: 205px;
-    width: 140px;
-    text-align: center;
-    color: #666;
-    z-index: -1;
-  }
-  
-  #percentage {
-    font-size: 15px;
-  }
+#legend {
+  padding: 10px 0 0 3px;
+}
+
+#sequence text, #legend text {
+  font-weight: 600;
+  fill: #fff;
+}
+
+#chart {
+  position: relative;
+}
+
+#chart path {
+  stroke: #fff;
+}
+
+#explanation {
+  position: absolute;
+  font-size: 18px;
+  top: 230px;
+  left: 430px;
+  width: 140px;
+  text-align: center;
+  color: #666;
+  z-index: -1;
+}
+
+#percentage {
+  position: absolute;
+  font-size: 20px;
+  top: 300px;
+  left: 430px;
+  width: 140px;
+  text-align: center;
+  z-index: -1;
+
+}
   
