--- a/src/css/infoPage.css
+++ b/src/css/infoPage.css
@@ -1,3 +1,7 @@
+.App {
+    font-family: 'Roboto', sans-serif;
+      text-align: center;
+    }
 .title {
     height:  500px;
     background-color: #C4C4C4;
@@ -11,6 +15,11 @@
     width: 600px;
 }
 
+.data{
+    width: 100%;
+    height: 1000px; 
+}
+
 .piechart {
     width: 100%;
     height: 500px;
@@ -21,8 +30,9 @@
     width: 1200px;
     margin: auto;
     
-    
-
-    
 }
 
+.whitespace {
+    width : 100%;
+    height: 300px;
+}
