--- a/src/pages/header.css
+++ b/src/pages/header.css
@@ -1,7 +1,9 @@
 .header {
+    font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
 }
 
 
